Update CS CourseSite Generator Installation manual.html

--- a/CS CourseSite Generator Installation manual.html
+++ b/CS CourseSite Generator Installation manual.html
@@ -44,7 +44,7 @@
 		</ol>
 		<hr>
 		<h3>Author</h3>
-		Written by <a href="https://github.com/mortaji">Mohammad Mortaji</a>.
+		Written by <a href="">Yasser Ganjisaffar </a> and <a href="https://github.com/mortaji">Mohammad Mortaji</a>.
 		Report bugs to <a href="mailto:iri1404mm@gmail.com?subject=CE%20CourseSite%20Generator%20bug">
 			My Email</a>
 		<hr>
