--- a/CS CourseSite Generator Installation manual.html
+++ b/CS CourseSite Generator Installation manual.html
@@ -1,11 +1,11 @@
 <html><head>
 <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
 	
-		<title>CS CourseSite Generator Installation manual</title>
+		<title>CE CourseSite Generator Installation manual</title>
 	</head><body>
-		<h2>CS CourseSite Generator Installation manual</h2><hr>
+		<h2>CE CourseSite Generator Installation manual</h2><hr>
 		<h3>Base Requirements</h3>
-		In order to use CS CourseSite Generator the following prequisites are necessary.
+		In order to use CE CourseSite Generator the following prequisites are necessary.
 		<ul>
 			<li>
 				<a href="http://www.apache.org/">Apache Web Server</a> 
@@ -13,7 +13,7 @@
 				your website).
 			</li>
 			<li>
-				<a href="http://www.php.net/">PHP</a> version 4.3.0 Until 7.0.4 or better installed as an apache module.
+				<a href="http://www.php.net/">PHP</a> version 5.2.0 To 7 or better install as an apache module.
 			</li>
 			<li>
 				Linux/Unix Server
@@ -30,7 +30,7 @@
 				Run this command on linux shell: <br>&nbsp;&nbsp;&nbsp;&nbsp;chmod 777 your-course-directory
 			</li>
 			<li>
-				<b>Download</b> <a href="https://github.com/mortaji/CS-CourseSite-Generator">install.php</a> and <a href="https://github.com/mortaji/CS-CourseSite-Generator">
+				<b>Download</b> <a href="https://github.com/mortaji/CE-CourseSite-Generator">install.php</a> and <a href="https://github.com/mortaji/CE-CourseSite-Generator">
 				CoursePackage.tar.gz</a> and copy them to your-course-directory.
 			</li>
 			<li>
@@ -44,15 +44,14 @@
 		</ol>
 		<hr>
 		<h3>Author</h3>
-		Written by <a href="">Yasser Ganjisaffar </a> and <a href="https://github.com/mortaji">Mohammad Mortaji</a>.
+		Written by <a href="">Yasser Ganjisaffar(2004-2016) </a> and <a href="https://github.com/mortaji">Mohammad Mortaji(2016-2017)</a>.
 		Report bugs to <a href="mailto:iri1404mm@gmail.com?subject=CE%20CourseSite%20Generator%20bug">
 			My Email</a>
 		<hr>
 		<h3>License</h3>
-		CS CourseSite Generator is a free software, released under <a href="http://www.gnu.org/copyleft/gpl.html">GNU GPL License Version 3.0</a>
+		CE CourseSite Generator is a free software, released under <a href="http://www.gnu.org/copyleft/gpl.html">GNU GPL License Version 2.0</a>
 		<hr>
 		Your suggestions and feedbacks are appreciated.<br>
 		Enjoy it! <br>
-        2017/01/19
 		
 	</body></html>
